@@ -1,0 +1,14 @@
+[
+          {
+            'class_description' => 'Options for special file system like \'bind\'',
+            'name' => 'Fstab::NoneOptions',
+            'element' => [
+                           'bind',
+                           {
+                             'value_type' => 'boolean',
+                             'type' => 'leaf'
+                           }
+                         ]
+          }
+        ]
+;
