@@ -1,6 +1,10 @@
+2010-11-18 Dominique Dumont  <domi.dumont@free.fr> 1.221
+
         * Fix pod spelling errors (RT #62947). Thanks to carnil for the report and patches.
         * added config-edit test (build requires Test::Command)
         * config-edit: added application option
+	* Model.pm: updated doc
+	* bash_completion.config-edit: is now not executable
 
 2010-11-10 Dominique Dumont  <domi.dumont@free.fr> 1.220
 
